# mcp-biomodelling-servers

./: .gitignore  README.md  artifact_manager.py  pyproject.toml
.claude/agents/: README.md  literature-rule-validator.md  model-constructor.md  parameter-calibration.md  spatial-analysis.md  uq.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
LiteratureValidation/: CLAUDE.md  README.md  pyproject.toml  server.py
MaBoSS/: server.py  session_manager.py
NeKo/: server.py  session_manager.py  utils.py
NeKo/src/: __init__.py  helpers.py
PhysiCell/: .mcp.json  CLAUDE.md  README.md  backends.py  install.py  main.py  pyproject.toml  server.py  session_manager.py  test.py  test_backends.py
PhysiCell/.claude-plugin/: plugin.json
PhysiCell/blind-recap/: SKILL.md
PhysiCell/patches/: fix_xpath_setter.patch  uq_physicell_xpath_issue.md
PhysiCell/physicell-simulation/: SKILL.md  install-skill.sh
PhysiCell/physicell-simulation/calibration/: calibration_driver.py
PhysiCell/physicell-simulation/calibration/hooks/: forbid_target_source_paths.py
PhysiCell/physicell-simulation/calibration/prompts/: digest_rebuild_prompt_template.md  digest_update_prompt_template.md  iteration_prompt_template.md
PhysiCell/physicell-simulation/calibration/schemas/: iter_record.schema.json
PhysiCell/physicell-simulation/references/: literature-search.md  literature-validation.md  parameter-reference.md  pcdl-analysis-reference.md  physiboss-integration.md  rules-and-hill-functions.md  slurm-integration.md  spatial-recapitulation-workflow.md  troubleshooting.md  uq-calibration-workflow.md
PhysiCell/physicell-simulation/scripts/: validate_config.py
PhysiCell/scripts/: physicell.sbatch
SpatialTissue/: server.py  session_manager.py
SpatialTissue/artifacts/1a8096fe-9167-405c-ad7b-9e5d3d931607/: session_meta.json
SpatialTissue/artifacts/37d1dca9-de23-4265-8963-6392801293ab/: panel_20260227T215430.csv  session_meta.json
SpatialTissue/artifacts/bec087eb-8056-47bc-a3c6-7f2dd5d29451/: session_meta.json
SpatialTissue/artifacts/dfbbc025-451f-4e3b-b296-c107cccdcd0f/: session_meta.json
SpatialTissue/artifacts/f877621b-7c08-42a6-a742-3d1f87685deb/: network_metrics_20260227T220517.csv  session_meta.json
SpatialTissue/spatial-analysis/: SKILL.md
tests/: test_artifact_manager.py  test_maboss_session_manager.py  test_neko_session_manager.py  test_physicell_session_manager.py  test_spatial_analysis_session_manager.py
