[project]
name = "literature-validation"
version = "0.1.0"
description = "Literature Validation MCP Server - Validate PhysiCell cell rules against PubMed literature using PaperQA2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.4",
    "paper-qa>=5",
    "httpx>=0.27",
    "coredis>=4",
]
