[project]
name = "literature-validation"
version = "0.2.0"
description = "Literature Validation MCP Server - Validate PhysiCell cell rules against published literature using Edison PaperQA3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.4",
    "edison-client",
    "httpx>=0.27",
]
