[project]
name = "physicell"
version = "0.1.0"
description = "PhysiCell MCP Server - Create and run biological simulations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.4",
    "physicell-settings>=0.4.5",
    "cairosvg>=2.7.0",
    "pillow>=10.0.0",
    "uq-physicell>=1.2.4",
]

[project.optional-dependencies]
bo = ["torch", "botorch", "gpytorch"]
abc = ["pyabc"]
all = ["torch", "botorch", "gpytorch", "pyabc"]
