[project]
name = "physicell"
version = "0.1.0"
description = "PhysiCell MCP Server - Create and run biological simulations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.4",
    "physicell-settings>=0.4.5",
    "cairosvg>=2.7.0",
    "pillow>=10.0.0",
    "uq-physicell>=1.2.4",
    "pcdl>=4.0.0",
    "pyabc>=0.12.16",
]

[project.optional-dependencies]
bo = ["torch", "botorch", "gpytorch"]
abc = ["pyabc"]
all = ["torch", "botorch", "gpytorch", "pyabc"]

# TEMPORARY source override: pull physicell-settings from the zacsims fork's
# fix/load-xml-lossy-parsers branch while https://github.com/marcorusc/PhysiCell_Settings/pull/6
# is pending review. The branch adds parsers for cell_interactions,
# cell_transformations, cell_integrity, and initial_parameter_distributions,
# which load_xml used to silently drop -- breaking any round-trip workflow
# that depends on those sections (e.g. calibration loops that load a prior
# config, tweak one parameter, and re-export).
#
# Revert to PyPI resolution (delete this block) once the upstream PR is
# merged and released.
[tool.uv.sources]
physicell-settings = { git = "https://github.com/zacsims/PhysiCell_Settings.git", branch = "fix/load-xml-lossy-parsers" }
